add blsp dmafor i2c
Signed-off-by: Sricharan R <sricharan@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/msm8916.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8916.dtsi
@@ -454,6 +454,8 @@
 			clocks = <&gcc GCC_BLSP1_AHB_CLK>,
 				<&gcc GCC_BLSP1_QUP4_I2C_APPS_CLK>;
 			clock-names = "iface", "core";
+			dma-names = "rx", "tx";
+			dmas = <&blsp_dma 11>, <&blsp_dma 10>;
 			pinctrl-names = "default", "sleep";
 			pinctrl-0 = <&i2c4_default>;
 			pinctrl-1 = <&i2c4_sleep>;
